core - updated bloc package and fixed related issues feature - added widgets to the presentation layer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
   # Service locator
   get_it: ^2.0.1
   # Bloc for state management
-  flutter_bloc: ^0.21.0
+  flutter_bloc: ^2.0.1
   # Value equality
   equatable: ^0.4.0
   # Functional programming thingies
@@ -21,17 +21,19 @@ dependencies:
   data_connection_checker: ^0.3.4
   http: ^0.12.0+2
   # Local cache
-  shared_preferences: ^0.5.3+4  
+  shared_preferences: ^0.5.3+4
 
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.0  
+  mockito: ^4.1.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/img/placeholder_img.jpg
   fonts:
     - family: Raleway
       fonts:
