--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   http: ^0.12.0+2
   # Local cache
   shared_preferences: ^0.5.3+4
-
+  # Number formatting
+  intl: ">=0.14.0"
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
